prevent selection of unsupported bip322 format when signing a message with a connected device